more doku updates

--- a/Dokumentation/Dokumentation/01_einleitung.tex
+++ b/Dokumentation/Dokumentation/01_einleitung.tex
@@ -27,7 +27,7 @@ Dieser Ansatz soll dem Projektteam helfen, Wissen über mögliche Angriffsszenar
 \label{sec:Ziele}
 
 Ziel dieser Arbeit ist es, ein System zu entwickeln, das als Honeypot dient. Dieser Honeypot soll eingesetzt werden, um Einblicke in die Vorgehensweise eines Angreifers zu bekommen. 
-Das System stellt dazu ein vermeintlich leicht angreifbaren Webserver sowie SSH-Server dar.\\
+Das System stellt dazu einen vermeintlich leicht angreifbaren Webserver sowie SSH-Server dar.\\
 
 
 Jegliche Zugriffe und Aktivitäten die ein Angriff hinterlässt werden protokolliert und ausgewertet. Das hierbei gewonnene Wissen soll in Form von IT-Sicherheitsmaßnahmen in bestehende und künftige IT-Infrastrukturen einfließen.
@@ -49,7 +49,7 @@ Der Hauptbestandteil dieses Projekts liegt in der Inbetriebnahme und Bereitstell
 \item Inbetriebnahme des Honeypots selbst
 \item Gewährleistung höchstmöglicher Sicherheit für das eigene und das globale Netz
 \item Automatisierte Auswertung von Log-Files durch Skripte
-\item Erarbeitung und Ausweitung von Sicherheitsrichtlinien durch Auswertung von Log-Files (Passwortrichtlinien, Firewallregeln)
+\item Erarbeitung und Ausweitung von Sicherheitsrichtlinien durch Auswertung von Logdateien (Passwortrichtlinien, Firewallregeln)
 \item Dokumentation des Honeypots inklusive Umgebung, Angriffsphase und gesammelter Daten
 \end{itemize}
 
