--- a/Dokumentation/Dokumentation/02_grundlagen.tex
+++ b/Dokumentation/Dokumentation/02_grundlagen.tex
@@ -17,7 +17,7 @@ Ein Honeypot kann je nach Eigenschaften oder Einsatzgebiet einer Klasse von Hone
 \end{itemize}
 
 Ein LIHP simuliert einen oder nur eine kleine Anzahl an Diensten wie SSH oder FTP und antwortet dabei nur in sehr geringem Umfang, um beispielsweise Protokollhandshakes abzubilden. Die gewonnenen Informationen dienen dabei oftmals nur zu statistischen Zwecken.
-MIHPs bilden einzelne Dienste erheblich genauer ab. Eine vollständige Kommunikation über den angeboten Dienst ist somit möglich. Da diese Typen jeweils nur einzelne Dienste und keine Funktionalität eines Betriebssystems abbilden, ist die Gefahr der Kompromittierung des Honeypots-System gering. HIHP sind in der Entwicklung, beim Ausrollen sowie bei der Wartung dagegen deutlich komplexer, ermöglichen jedoch auch den höchsten Grad der Erfassung von Angriffsmustern. Ein HIHP bildet ein komplettes Betriebssystem inklusive mehrerer Dienste ab. Der Fokus eines HIHPs liegt dabei nicht auf automatisierten Angriffen, sondern darauf, manuell ausgeführte Angriffe zu beobachten und protokollieren, um so neue Angriffsmethoden rechtzeitig zu erkennen \cite{WikiHoney16}.
+MIHPs bilden einzelne Dienste erheblich genauer ab. Eine vollständige Kommunikation über den angebotenen Dienst ist somit möglich. Da diese Typen jeweils nur einzelne Dienste und keine Funktionalität eines Betriebssystems abbilden, ist die Gefahr der Kompromittierung des Honeypots-System gering. HIHP sind in der Entwicklung, beim Ausrollen sowie bei der Wartung dagegen deutlich komplexer, ermöglichen jedoch auch den höchsten Grad der Erfassung von Angriffsmustern. Ein HIHP bildet ein komplettes Betriebssystem inklusive mehrerer Dienste ab. Der Fokus eines HIHPs liegt dabei nicht auf automatisierten Angriffen, sondern darauf, manuell ausgeführte Angriffe zu beobachten und protokollieren, um so neue Angriffsmethoden rechtzeitig zu erkennen \cite{WikiHoney16}.\\
 
 
 Der Einsatz von Honeypots bringt nicht nur Vorteile mit sich. Nawrocki et. al bemängeln in \cite{NawrockiWSKS16}, dass ein Honeypot-System von einem Angreifer oftmals erkannt wird, da sich das Verhalten der simulierten Dienste von einem realen Dienst unterscheidet. Zudem besteht jederzeit die Gefahr, dass ein Honeypot-System von einem Angreifer kompromittiert oder gar übernommen wird. Dies stellt ein erhebliches Risiko für die umgebende Infrastruktur dar.
