--- a/Dokumentation/Dokumentation/05_loesungsansaetze.tex
+++ b/Dokumentation/Dokumentation/05_loesungsansaetze.tex
@@ -21,11 +21,20 @@ Eine weitere Möglichkeit wäre das System bei einem der Projektmitglieder priva
 
 % mögliche lösungen bzgl. honeypotdienste + eigenentwicklung
 
-In den Anfordurgen wurde definiert, dass das Honeypotsystem einen oder besser mehrere Dienste simuliert.  Es ist somit denkbar, Honeypotdienste einzusetzen, die einen Telnet oder SSH-Dienst, einen (S)FTP-Dienst, einen HTTP(S) oder SMTP-Dienst simulieren. Auch weitere Dienste sind denkbar. In Kapitel \ref{ch:Marktanalyse} wurden bereits bestehende Lösungen analysiert, die einen Teil der oben genannten Dienste nachbilden können.
-Eine Lösung, die genau den definierten Anforderungen entspricht, kann zudem über eine Eigenentwicklung erarbeitet werden. Hierbei wäre denkbar, einen Webhoneypot auf Basis eines bestehenden Webservers wie Apache, Nginx oder lighttpd umzusetzen. Dazu kann eine Website implementiert werden, die neben Standardelementen wie Text und Buttons auch ein Login-Formular bietet, über das ein potentieller Angreifer mögliche Kombinationen aus Benutzernamen und Passwörter eingeben kann, die im Hintergrund dokumentiert werden. Bei der Auswertung dieser Felder ist allgemein zu beachten, dass diese Ziel einer SQL Injection werden können, um den Loginvorgang zu manipulieren. Ebenfalls wäre eine Art Gästebuch denkbar, dass neben Felder für Namen, Emailadresse auch ein Textfeld enthält, welches in der Vergangenheit Ursprung von Cross-Site-Scripting-Angriffen war. Zu berücksichtigen ist, dass für eine Auswertung der Angriffe jegliche Benutzereingaben dokumentiert werden müssen.
+In den Anforderungen wurde definiert, dass das Honeypotsystem einen oder besser mehrere Dienste simuliert.  Es ist somit denkbar, Honeypotdienste einzusetzen, die einen Telnet oder SSH-Dienst, einen (S)FTP-Dienst, einen HTTP(S) oder SMTP-Dienst simulieren. Auch weitere Dienste sind denkbar. In Kapitel \ref{ch:Marktanalyse} wurden bereits bestehende Lösungen analysiert, die einen Teil der oben genannten Dienste nachbilden können.
+Eine Lösung, die genau den definierten Anforderungen entspricht, kann zudem über eine Eigenentwicklung erarbeitet werden. Hierbei wäre denkbar, einen Webhoneypot auf Basis eines bestehenden Webservers wie Apache, Nginx oder lighttpd umzusetzen. Dazu kann eine Website implementiert werden, die neben Standardelementen wie Text und Buttons auch ein Login-Formular bietet, über das ein potentieller Angreifer mögliche Kombinationen aus Benutzernamen und Passwörter eingeben kann, die im Hintergrund dokumentiert werden. Bei der Auswertung dieser Felder ist allgemein zu beachten, dass dieses Ziel einer SQL Injection werden können, um den Login-Vorgang zu manipulieren. Ebenfalls wäre eine Art Gästebuch denkbar, dass neben Felder für Namen, Emailadresse auch ein Textfeld enthält, welches in der Vergangenheit Ursprung von Cross-Site-Scripting-Angriffen war. Zu berücksichtigen ist, dass für eine Auswertung der Angriffe jegliche Benutzereingaben dokumentiert werden müssen.
+
+
+\section{Monitoring von Logdateien}
+\label{sec:Monitoring von Logdateien}
+
+Logdateien dienen dazu, den Status des Systems und von Diensten zu protokollieren. In diesen Logdateien lassen sich Fehler, Probleme von Diensten oder einfache Statusausgaben nebst Datum und Uhrzeit nachvollziehen. Die Logdateien liegen üblicherweise im Textformat vor und werden im Verzeichnis \textit{/var/log} abgelegt. Die Auswertung der Logdateien kann direkt über die Kommandozeile oder über einen Texteditor erfolgen. Je nach System und der Anzahl an Diensten kann der Umfang an Logdateien nicht unerheblich sein, wodurch die Auswertung eine Menge Zeit in Anspruch nehmen kann. Um das Honeypotsystem durchgängig überwachen zu können, ohne dabei manuell eine Auswertung von verschiedenen Logdateien vornehmen zu müssen, entscheidet sich das Projektteam zu einer automatisierten Auswertung. Eine Marktanalyse zeigt, dass es hierfür eine größere Anzahl an Lösungen gibt. In einer näheren Auswahl werden \textit{logcheck}\footnote{ \textit{logcheck}: \url{http://logcheck.org/}} und \textit{Graylog}\footnote{ \textit{Graylog}: \url{https://www.graylog.org/}} betrachtet. \textit{Graylog} ist ein Open-Source-Projekt, welches das Sammeln und Analysieren von Syslog- und Eventlog-Nachrichten von verschiedenen Hosts und Diensten ermöglicht. Es lassen sich somit Logs einer ganzen Infrastruktur zentral auswerten. Die Daten werden in einer Datenbank abgelegt und können über eine Weboberfläche ausgewertet und eingesehen werden. 
+
+\textit{Logcheck} dagegen wertet Logdateien mit regulären Ausdrücken auf Fehler und Sicherheitsmeldungen aus und sendet regelmäßig eine Benachrichtigung via Email. Die Ausführung erfolgt über die Kommandozeile, oder wie vorkonfiguriert stündlich über einen cronjob. 
 
 
 
+\section{Auswertung der Daten der Honeypotdienste}
+\label{sec:Auswertung der Daten der Honeypotdienste}
 
-
-
+Honeypots dienen unter anderem dazu, aus dem Vorgehen der Angreifer zu lernen. So ist es notwendig das Vorgehen von Angreifern zu protokollieren, um dieses im Nachgang auswerten zu können. Unter Linux ist es üblich, wie unter \ref{sec:Monitoring von Logdateien} beschrieben, dass der Status eines Diensts oder dessen Ausgaben in Logdateien gesichert werden. Dieser Ansatz wird oftmals auch bei Software angewendet So schreiben die in der Marktanalyse betrachteten Lösungen ebenfalls Logdateien. Diese gilt es auszuwerten. So ist für \textit{Kippo} beispielsweise das Werkzeug \textit{Kippo-Graph}\footnote{ \textit{Kippo-Graph}: \url{https://bruteforce.gr/kippo-graph}} entstanden. Dieses ermöglicht es \textit{Kippo}-Logdateien auszuwerten und Grafiken zu den meistgenutzten Passwörtern, Benutzernamen oder zur Herkunft der Verbindungen zu erstellen. Für diese Funktionalität setzt \textit{Kippo-Graph} PHP-5 und einen Webserver voraus. Für andere Honeypotdienste ist solch eine komfortable Lösung nicht vorhanden. Um die Daten anderer Honeypotdienste oder einer selbst implementierten Lösung ebenfalls auswerten zu können, ist denkbar eine eigene Implementierung umzusetzen. Hierbei muss es sich nicht um eine komplette Neuentwicklung handeln, es könnte auf verfügbare Komponenten zurückgegriffen werden. So ist denkbar, ein Bash-Skript zu entwickeln, dass in regelmäßigen Zeitintervallen die Logdateien verschiedener Dienste auf Verbindungsdaten, abgesetzte Befehle oder die aufgerufenen Websites eines Honeypots auswertet. So können Verbindungsdaten wie IP-Adressen im Nachgang beispielsweise für Firewall-Regeln verwendet werden. Daten wie Benutzernamen oder Passwörter, die bei einem SSH-Honeypot oder Webhoneypot mit Login-Formular zu erwarten sind, können statistisch ausgewertet werden. Als eine Komponente kann hier der \textit{Pipal Password Analyzer}\footnote{ \textit{Pipal Password Analyzer}: \url{https://github.com/digininja/pipal}} dienen, der aus einer Liste von Passwörter Häufigkeiten und Zusammensetzung der Passwörter auswertet.
