--- a/Dokumentation/Dokumentation/06_auswahl.tex
+++ b/Dokumentation/Dokumentation/06_auswahl.tex
@@ -11,12 +11,12 @@ In diesem Kapitel erfolgt die Bewertung der unter \ref{ch:Lösungsansätze} aufg
 Für das Honeypotsystem wird mindestens ein oder gar mehrere Hostsysteme benötigt. In Kapitel \ref{ch:Lösungsansätze} wurden dazu die möglichen Lösungen zum Hosting auf den Hochschulservern, bei einem öffentlichen Provider oder im privaten Umfeld aufgezeigt. Das Projektteam entscheidet sich hierbei für ein Hosting bei providerdienste.de. Diese Entscheidung wurde aufgrund folgender Kriterien getroffen:
 
 \begin{itemize}
-\item Bereitstellung eines vServers bei providerdienste.de innerhalb 24 Stunden - die Bereitstellung auf Hochschulservern wurde auf Anfrage auf unbestimmte Zeit datiert, wodurch eine Planung weiterer Projektschritte erschwert wird. Eine qualitativ gleichwertige Umsetzung im privaten Umfeld, die dem Angebot des Providers entspricht, kann nicht nicht innerhalb von 24 Stunden umgesetzt werden und bedarf zusätzlicher Sicherheitsmaßnahmen zum Schutz anderer Systeme innerhalb des gleichen Netzwerksegments.
+\item Bereitstellung eines vServers bei providerdienste.de innerhalb 24 Stunden - die Bereitstellung auf Hochschulservern wurde auf Anfrage auf unbestimmte Zeit datiert, wodurch eine Planung weiterer Projektschritte erschwert wird. Eine qualitativ gleichwertige Umsetzung im privaten Umfeld, die dem Angebot des Providers entspricht, kann nicht innerhalb von 24 Stunden umgesetzt werden und bedarf zusätzlicher Sicherheitsmaßnahmen zum Schutz anderer Systeme innerhalb des gleichen Netzwerksegments.
 \item je vServer eine öffentliche IPv4-Adresse - im privaten Umfeld der Projektmitglieder ist keine Nutzung einer öffentlichen IPv4-Adresse möglich. Dies begründet sich auf den Anbieter Unitymedia und deren DS Light-Anschlusstechnik, die mehrere Anschlüsse über ein NAT-Verfahren über eine öffentliche IP-Adresse bereitstellt. An den Modems der Projektmitglieder ist somit nur eine private IP-Adresse vorhanden.
 \item Remote-Konsole - diese Konsole ermöglicht die Verwaltung des vServer selbst dann, wenn kein Zugriff via SSH möglich ist. Eine Lösung in diesem Umfang ist beim Angebot des Rechenzentrums in Form der Beschränkung auf einen SSH-Zugangs nicht gegeben. Im privaten Umfeld wäre für solch eine Lösung weiterer Implementierungsaufwand notwendig.
 \end{itemize}
 
-Für die Implementierung setzt das Projekteam somit auf einen gemieteten vServer. Aufgrund der ausreichenden Performance des Einstiegsmodelle der vServer bei providerdienste.de sowie den zusätzlichen Kosten, die durch weitere gemietete Systeme entstehen würden, entscheidet sich das Team zur Umsetzung auf einem einzigen System. Dabei fällt die Wahl auf ein Debian, da die Projektmitglieder eine Erfahrung in der Verwaltung dieses Systems mitbringt.\\
+Für die Implementierung setzt das Projektteam somit auf einen gemieteten vServer. Aufgrund der ausreichenden Performance des Einstiegsmodell der vServer bei providerdienste.de sowie den zusätzlichen Kosten, die durch weitere gemietete Systeme entstehen würden, entscheidet sich das Team zur Umsetzung auf einem einzigen System. Dabei fällt die Wahl auf ein Debian, da die Projektmitglieder eine Erfahrung in der Verwaltung dieses Systems mitbringen.\\
 
 \section{Honeypotdienste}
 \label{sec:Honeypotdienste}
@@ -33,4 +33,18 @@ Die Linux-Distribution HoneyDrive bringt bereits eine größere Zahl an Honeypot
 Honeyd dient mehr der Bereitstellung virtueller Hosts in einem Netzwerk zur Verschleierung der realen Infrastruktur und entspricht somit nicht der Anforderung der Bereitstellung eines SSH- oder Webdienstes. Als SSH-Honeypot fällt somit die Wahl auf Kippo.
 
 Aufgrund der umfangreichen Funktionen des Webhoneypots Glastopf, insbesondere im Hinblick auf die gezielte Bekanntmachung eigener Schwachstellen bei gängigen Suchmaschinen, was dem Projektteam eine größere, potentiell auszuwertende Datenmenge in Aussicht stellte, fiel die Wahl zunächst auf diesen Honeypot. Wegen anhaltender Schwierigkeiten bei dem Versuch der Inbetriebnahme durch das Projektteam am 29. November 2016, hat sich das Projektteam bedingt durch einen zu diesem Zeitpunkt bekannten, aber von offizieller Seite noch nicht behobenen Fehler\footnote{ \textit{Make-Error, gemeldet am 23. September 2016 von Nutzer ioanamat}: \url{https://github.com/mushorg/glastopf/issues/266}} beim Ausführen eines Makefiles aus Zeitgründen dazu entschieden, Glastopf nicht zu verwenden. Stattdessen wird nun SNARE verwendet. Der Webhoneypot SNARE bietet die Möglichkeit bereits bestehende Internetauftritte zu klonen, wodurch sich viele Website einfach nachahmen lassen. Hierbei muss jedoch berücksichtigt werden, dass speziell komplexere Webservices den Einsatz bestimmter Infrastruktur wie Datenbanken voraussetzen, wodurch die Möglichkeiten des Klonens eingeschränkt sind. Das Projektteam entscheidet sich aus Zeitgründen daher zunächst eine bestehende Webseite zu verwenden und gegebenenfalls zu einem späteren Zeitpunkt durch eine selbstgeschriebene Webseite zu ersetzen.
+
+
+\section{Monitoring von Logdateien}
+\label{sec:Monitoring von Logdateien}
+
+Für das automatisierte Monitoring von Logdateien wurden die möglichen Lösungen \textit{Graylog} und \textit{logcheck} näher betrachtet. Speziell \textit{Graylog} liefert einen großen Funktionsumfang, wodurch eine gesamte Infrastruktur von zentraler Stelle aus überwacht werden kann. Dieses Setup erfordert jedoch auch einen großen Installations- und Konfigurationsaufwand, der nicht zu unterschätzen ist. Zudem bietet dieses Setup durch den großen Umfang weitere Angriffsfläche für das Honeypotsystem.
+
+Die von \textit{logcheck} erbrachte Funktionalität der Auswertung von Logdateien über vordefinierte reguläre Ausdrücke und der Benachrichtigung ist im Rahmen dieses Projekt ausreichend. Auch der Installations- und Konfigurationsaufwand von \textit{logcheck} ist gegenüber \textit{Graylog} deutlich geringen. Somit wird für das Monitoring von Logdateien diese Lösung gewählt.
+
+
+\section{Auswertung der Daten der Honeypotdienste}
+\label{sec:Auswertung der Daten der Honeypotdienste}
+
+Eine Auswertung der Daten der Honeypotdienste kann über bestehende Lösungen oder eine Eigenimplementierung erfolgen. Als bestehende Lösung wurde \textit{Kippo-Graph} betrachtet, was speziell auf den SSH-Honeypot \textit{Kippo} zugeschnitten ist. Die von \textit{Kippo-Grap}h erzeugen Grafiken ermöglichen eine einfache bildhafte Auswertung von Daten. Jedoch ist diese Lösung speziell auf \textit{Kippo} zugeschnitten und benötigt zur Ausführung einen Webserver. Um auch Daten anderer Honeypotdienste auswerten zu können und den Overhead eines Webservers zu vermeiden, wird eine Eigenimplementierung angestrebt. Diese wertet über Linux-Kommandos wie \textit{grep}, \textit{sed}, \textit{sort} und \textit{uniq} Logdateien aus. Die so erhobenen Daten sollen anschließend weiterverarbeitete werden. So sollen die erhobenen IP-Adressen für Firwallregeln, die mit \textit{iptables} umgesetzt werden, verwendet werden. Statistiken über Passwörter werden mit \textit{Pipal Password Analyzer} erstellt.
 
