--- a/Dokumentation/Dokumentation/08_evaluation.tex
+++ b/Dokumentation/Dokumentation/08_evaluation.tex
@@ -4,21 +4,21 @@
 \section{Umsetzung der Anforderungen}
 \label{sec:Umsetzung der Anforderungen}
 
-Die unter \ref{sec:Muss-Kriterien} aufgeführten Muss-Kriterien wurden vollständig erfüllt. In diesem Projekt wurde ein Honeypotsystem auf einem von providerdienste.de bereitgestellten vServer umgesetzt. Dieser vServer ist über eine öffentliche IPv4-Adresse im Internet erreichbar und implementiert einen SSH- und Webhoneypot. Durch die von providerdienste.de bereitgestellte Konsole ist es möglich, das System selbst dann, wenn keine Verbindung via SSH möglich ist oder der Server kompromittiert oder gar übernommen wurde, zu konfigurieren und darauf zuzugreifen. Es ist dem Projektteam somit jederzeit möglich, das Honeypotsystem abzuschalten, sofern die Situation es erfordern sollte. Durch die Aktualisierung aller Pakete und der Limitierung der SSH-Authentifzierung auf ein Public-Key-Verfahren wurde das Honeypotsystem bestmöglich abgesichert. Jeglicher Datenverkehr wird geloggt. Einem Angreifer ist es somit ohne den Besitz eines der Private-Keys der Projektmitglieder, Kenntnisse über aktuelle Schwachstellen bei den eingesetzten Systemen oder Infiltration des Rechenzentrums von providerdienste.de, nicht ohne Weiteres möglich sich Zugriff zu dem eingesetzten vServer zu verschaffen. Die Möglichkeit zur Manipulation von protokollierten Daten ist somit, gemessen an den zeitlichen Ressourcen des Projektteams, kleinstmöglich gehalten.\\
+Die unter \ref{sec:Muss-Kriterien} aufgeführten Muss-Kriterien wurden vollständig erfüllt. In diesem Projekt wurde ein Honeypotsystem auf einem von providerdienste.de bereitgestellten vServer umgesetzt. Dieser vServer ist über eine öffentliche IPv4-Adresse im Internet erreichbar und implementiert einen SSH- und Webhoneypot. Durch die von providerdienste.de bereitgestellte Konsole ist es möglich, das System selbst dann, wenn keine Verbindung via SSH möglich ist oder der Server kompromittiert oder gar übernommen wurde, zu konfigurieren und darauf zuzugreifen. Es ist dem Projektteam somit jederzeit möglich, das Honeypotsystem abzuschalten, sofern die Situation es erfordern sollte. Durch die Aktualisierung aller Pakete und der Limitierung der SSH-Authentifzierung auf ein Public-Key-Verfahren wurde das Honeypotsystem bestmöglich abgesichert. Jeglicher Datenverkehr wird geloggt. Einem Angreifer ist es somit ohne den Besitz eines der Private-Keys der Projektmitglieder, Kenntnisse über aktuelle Schwachstellen bei den eingesetzten Systemen oder Infiltration des Rechenzentrums von providerdienste.de, nicht ohne weiteres möglich sich Zugriff zu dem eingesetzten vServer zu verschaffen. Die Möglichkeit zur Manipulation von protokollierten Daten ist somit, gemessen an den zeitlichen Ressourcen des Projektteams, kleinstmöglich gehalten.\\
 
-Das Soll-Kriterium der automatischen Benachrichtigung bei einem Angriff auf das Honeypotsystem stellte sich im Nachhinein als nicht sonderlich hilfreich dar. Speziell auf Port 22 und somit auf den SSH-Honeypot wurden täglich viele Verbindungen aufgebaut. Die Benachrichtigung darüber war für die Projektmitglieder aber wenig hilfreich, da jegliche Kommunikation und Angriffsversuche geloggt und automatisiert ausgewertet wurden. Zudem werden die auswerteten Daten und Konfigurationen automatisch über eine verschlüsselte Verbindung auf dem Cloud-Speicher Google Drive abgelegt. Die Benachrichtigung bietet so nur einen geringen Mehrwert. Bei der Archivierung der auswerteten Daten sowie dem Backup von Konfigurationsdateien ist anzumerken, dass hier ein separater Server oder ein anderes Backupmedium möglicherweise besser geeignet wäre, da es mit den Richtlinien von Google zu einem Datenschutzkonflikt kommen kann.\\
+Das Soll-Kriterium der automatischen Benachrichtigung bei einem Angriff auf das Honeypotsystem stellte sich im Nachhinein als nicht sonderlich hilfreich dar. Speziell auf Port 22 und somit auf den SSH-Honeypot wurden täglich viele Verbindungen aufgebaut. Die Benachrichtigung darüber war für die Projektmitglieder aber wenig hilfreich, da jegliche Kommunikation und Angriffsversuche geloggt und automatisiert ausgewertet wurden. Zudem werden die ausgewerteten Daten und Konfigurationen automatisch über eine verschlüsselte Verbindung auf dem Cloud-Speicher Google Drive abgelegt. Die Benachrichtigung bietet so nur einen geringen Mehrwert. Bei der Archivierung der auswerteten Daten sowie dem Backup von Konfigurationsdateien ist anzumerken, dass hier ein separater Server oder ein anderes Backupmedium möglicherweise besser geeignet wäre, da es mit den Richtlinien von Google zu einem Datenschutzkonflikt kommen kann.\\
 
 Der Soll-Anforderung einer automatisierten Auswertung von Logdaten wurde durch den Einsatz selbstgeschriebener Bash-Skripte, sowie der fertigen Lösung Pipal zur statistischen Analyse von Passwörtern entsprochen. Ebenso der automatisiert stattfindenden externen Sicherung sowohl von Log-Files selbst als auch den Log-Files zugehörige, bereits ausgewertete Daten wurde entsprochen, indem diese unter Verwendung eines Bash-Skripts auf Google-Drive hochgeladen. 
 
-Die Kann-Kriterien unter \ref{sec:Kann-Kriterien} wurden nur teilweise erfolgreich umgesetzt. So war es dem Projektteam aus technischen Gründen nicht möglich, neben dem Honeypotsystem weitere Systeme wie einen Router, eine Firewall oder PCs in die Infrastruktur zu integrieren. Auch die Umsetzung eines Honeypots, der ein offenes WLAN oder einen Fake-Acces-Point bietet konnte nicht umgesetzt werden. Hier bietet sich Verbesserungspotential, da die durch ein Honeypot gewonnen Informationen speziell in einer größeren Umgebung wertvoll sind. So ist denkbar, aus den gesammelten IP-Adressen Firwallregeln zu erstellen, die auf einer der Infrastruktur vorgelagerten Firewall zur Wirkung kommen.
-Die komplette Umsetzung des Projekts fand auf einem gemieteten vServer statt. Die Kosten liegen hier mit 9,00 Euro je Monat in einem überschaubaren Rahmen. Die Anforderung nach einem geringen Stromverbrauch kann nicht exakt beurteilt werden, da über den Stromverbrauch keine Informationen vorliegen. Auf Grund dessen, dass es sich bei unserem System um ein virtuelles System handelt, welches sich ein physikalisches System mit anderen virtuellen Systemen teilt, kann jedoch von einer gewissen Energieeffizienz ausgegangen werden. Die Anforderung an einen reverse DNS-Lookup wurde wie unter x.y beschrieben umgesetzt und zusätzlich durch eine Darstellung einer Geo-IP-Karte (siehe Anhang x.y) ergänzt
+Die Kann-Kriterien unter \ref{sec:Kann-Kriterien} wurden nur teilweise erfolgreich umgesetzt. So war es dem Projektteam nicht möglich, neben dem Honeypotsystem weitere Systeme wie einen Router, eine Firewall oder PCs in die Projektumgebung zu integrieren. Dies begründet sich dadurch, dass das Honeypotsystem bei einem öffentlichen Provider angemietet wurde und so direkt im Internet erreichbar ist. Eine Nachbildung einer Umgebung, die beispielsweise aus einem Heimnetz oder auch kleineren Firmennetzwerk bekannt ist, war somit nicht möglich. Auch die Umsetzung eines Honeypots, der ein offenes WLAN oder einen Fake-Acces-Point bietet konnte nicht umgesetzt werden. Hier bietet sich Verbesserungspotential, da die durch ein Honeypot gewonnen Informationen speziell in einer größeren Umgebung wertvoll sind. So ist denkbar, aus den gesammelten IP-Adressen Firwallregeln zu erstellen, die auf einer der Infrastruktur vorgelagerten Firewall zur Wirkung kommen.
+Die komplette Umsetzung des Projekts fand auf einem gemieteten vServer statt. Die Kosten liegen hier mit 9,00 Euro je Monat in einem überschaubaren Rahmen. Die Anforderung nach einem geringen Stromverbrauch kann nicht exakt beurteilt werden, da über den Stromverbrauch keine Informationen vorliegen. Auf Grund dessen, dass es sich bei unserem System um ein virtuelles System handelt, welches sich ein physikalisches System mit anderen virtuellen Systemen teilt, kann jedoch von einer gewissen Energieeffizienz ausgegangen werden. Die Anforderung an einen reverse DNS-Lookup wurde wie unter \ref{subsec:IP-Adressen auswerten} beschrieben umgesetzt und zusätzlich durch eine Darstellung einer Geo-IP-Karte (siehe Abbildung \ref{fig:geo_ip_world}) ergänzt
 
 \section{Schlussfolgerungen SSH-Honeypot}
 \label{sec:Schlussfolgerungen SSH-Honeypot}
 
-Wie der Statistik im Anhang unter \nameref{app:Pipal Passwortstatistik} entnommen werden kann, wurden am SSH-Honeypot-Port ingesamt 420 Passwörter eingegeben, 130 davon sind einzigartig. Die 10 meistgenutzten Passwörter machen 35,46\% aller Passworteingaben aus. Betrachtet man die 10 meistgenutzten Passwörter genauer, fällt auf, das hier vorrangig die Zeichenketten \textit{admin} und \textit{password} sowie Zahlenfolgen wie \textit{123456} vertreten sind. Die Länge der eingegeben Passwörter betrug in über 25\% der Fälle sechs Zeichen, in 15,71\% acht Zeichen und in 14,29\% vier Zeichen. Über 80\% der eingegeben Passwörter bestanden aus acht oder weniger Zeichen. Ähnlich klare Verteilungen sind bei der Zusammensetzung von Passwörter aus Zeichenklassen zu erkennen. So bestehen über 38\% der Passwörter rein aus Buchstaben, weitere 30,48\% rein aus Zahlen.\\
+Wie der Statistik im Anhang unter \nameref{app:Pipal Passwortstatistik} entnommen werden kann, wurden am SSH-Honeypot-Port insgesamt 19450 Passwörter eingegeben, 7768 davon sind einzigartig. Die 10 meistgenutzten Passwörter machen 14,25\% aller Passworteingaben aus. Betrachtet man die 10 meistgenutzten Passwörter genauer, fällt auf, dass hier vorrangig die Zeichenketten \textit{admin}, \textit{password} und \textit{root} sowie Zahlenfolgen wie \textit{123456} vertreten sind. Die Länge der eingegeben Passwörter betrug in 14,31\% der Fälle zehn Zeichen, in 17,08\% acht Zeichen und in 25,04\% neun Zeichen. Über 84\% der eingegebenen Passwörter bestanden aus zehn oder weniger Zeichen. Ähnlich klare Verteilungen sind bei der Zusammensetzung von Passwörter aus Zeichenklassen zu erkennen. So bestehen über 26\% der Passwörter rein aus Kleinbuchstaben, weitere 8,76\% rein aus Zahlen.\\
 
-Eine ähnliche einseitige Verteilung lässt sich bei den verwendeten Benutzernamen erkennen. In über 50\% der Fälle wurde der Benutzername \textit{root} verwendet. Werden die Benutzernamen \textit{admin}, \textit{user} und \textit{test} hinzugezählt, decken diese Benutzernamen über 75\% ab.\\
+Eine ähnliche einseitige Verteilung lässt sich bei den verwendeten Benutzernamen erkennen. In 83,52\% der Fälle wurde der Benutzername \textit{root} verwendet. Wird der Benutzername \textit{admin} hinzugezählt, decken diese beiden Benutzernamen 94,34% ab.\\
 
 Aus diesen Zahlen wird vor allem eines deutlich. Die Verwendung eines der oben genannten Passwörter in Verbindung mit einem der genannten Benutzernamen birgt ein erhebliches Sicherheitsrisiko. Werden die Zugriffszeiten der Angreifer auf den SSH-Honeypot berücksichtigt, kann bei der Verwendung dieser Benutzer-Passwort-Kombinationen von einer Kompromittierung innerhalb weniger Stunden oder gar Minuten ausgegangen werden. Es sollte so zwingend sichergestellt werden, dass ein sicheres Passwort verwendet wird. Besser ist die Authentifizierung rein auf das Public-Key-Verfahren zu beschränken.\\
 
