--- a/Dokumentation/Dokumentation/00_titel.tex
+++ b/Dokumentation/Dokumentation/00_titel.tex
@@ -31,7 +31,7 @@ im Bachelor Studiengang Angewandte Informatik \\}
 
 \begin{center}
 \large{Wintersemester 2016 / 2017 \\
- bei Herrn Dr. Eggendorfer\\}
+ bei Herrn Prof. Dr. Eggendorfer\\}
 \end{center}
 
 \\
