--- a/Dokumentation/Dokumentation/09_fazit.tex
+++ b/Dokumentation/Dokumentation/09_fazit.tex
@@ -15,6 +15,6 @@
 
 %%
 
-Dieses Honeypot-Projekt war für die Teammitglieder äußerst lehr- und aufschlussreich. Die Umsetzung eines Honeypotsystems erfordert einiges an Planung, um die Gefahr einer möglichen Kompromittierung auf ein Minimum reduzieren zu können. Die im Rahmen der Vorlesung Systemadministration erlernten Fähigkeiten und Erfahrungen trugen dazu bei, ein Linux basiertes System grundlegend zu konfigurieren, auf bestimmte Anforderungen anzupassen sowie die Implementierung eines Projektgegenstands vorzunehmen.
+Dieses Honeypot-Projekt war für die Teammitglieder äußerst lehr- und aufschlussreich. Die Umsetzung eines Honeypotsystems erfordert ein großes Maß an Planung, um die Gefahr einer möglichen Kompromittierung auf ein Minimum reduzieren zu können. Die im Rahmen der Vorlesung Systemadministration erlernten Fähigkeiten und Erfahrungen trugen dazu bei, ein Linux basiertes System grundlegend zu konfigurieren, auf bestimmte Anforderungen anzupassen sowie die Implementierung eines Projektgegenstands vorzunehmen.
 
-Darüber hinaus konnte das Projektteam Erfahrungen im Bereich von Honeypots sammeln. Besonders aufschlussreich war, dass ein im Internet erreichbarer Server oder Dienst in kürzester Zeit zum Opfer werden kann. Zudem wurde die vorhandene Kenntnis sichere Passwörter zu verwenden noch einmal verstärkt.
+Darüber hinaus konnte das Projektteam Erfahrungen im Bereich von Honeypots sammeln. Besonders aufschlussreich war, dass ein im Internet erreichbarer Server oder Dienst in kürzester Zeit zum Opfer werden kann. Zudem wurde die vorhandene Kenntnis sichere Passwörter zu verwenden noch einmal verstärkt. Ebenso wurde die Bedeutung von Updates eingesetzter Softwarekomponenten im Hinblick auf die Gewährleistung von Sicherheit für das Gesamtsystem noch einmal deutlich.
