--- a/Dokumentation/Dokumentation/04_marktanalyse.tex
+++ b/Dokumentation/Dokumentation/04_marktanalyse.tex
@@ -29,4 +29,4 @@ Glastopf ist ein als Webserver getarnter Honeypot. Dieses System nutzt den Umsta
 \section{SNARE}
 \label{sec:SNARE}
 
-SNARE ist ein in Python geschriebener Webserver, der über einen HTTP-Requesthandler eine vom Administrator bereitgestellte Ordner-Struktur auf HTTP-Requests mappt. Darüber hinaus stellt dieser Honeypot Skripte bereit um bestehende Webpräsenzen zu klonen und als Web-Honeypot zu starten. So ist potentiell möglich jede beliebige bestehende Webseite, aber auch Eigenkreationen, als Web-Honeypot zu starten. Etwaige Eingaben, Nutzer-Interaktionen oder versuchte Zugriffe auf für Unbefugte nicht vorgesehene Administrationsebenen werden von SNARE geloggt \cite{Snare16}.\\
+SNARE ist ein in Python geschriebener Webserver, der über einen HTTP-Requesthandler eine vom Administrator bereitgestellte Ordner-Struktur auf HTTP-Requests mappt. Darüber hinaus stellt dieser Honeypot Skripte bereit um bestehende Webpräsenzen zu klonen und als Web-Honeypot zu starten. So ist potentiell möglich jede beliebige bestehende Webseite, aber auch Eigenkreationen, als Web-Honeypot zu starten. Etwaige Eingaben, Nutzer-Interaktionen oder versuchte Zugriffe auf für Unbefugte nicht vorgesehene Administrationsebenen werden von SNARE geloggt \cite{Snare16}. Ein entscheidender Nachteil von SNARE ist, dass keinerlei Möglichkeit zum Logging von Source-IP-Adressen gegeben ist und eine entsprechende Erweiterung zur Aufzeichnung selbiger durch das Projektteam vorgenommen werden müsste.\\
