--- a/Dokumentation/Dokumentation/99_anhang.tex
+++ b/Dokumentation/Dokumentation/99_anhang.tex
@@ -86,3 +86,27 @@
        \label{lst:reverse_dns},
        captionpos=b,language={}]
  {listings/reverse-dns.txt}
+ 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+\newpage 
+ 
+\section*{Auswertung snare-path-requestsp}
+\label{app:Auswertung snare-path-requests}
+
+\lstinputlisting
+    [caption={Auswertung snare-path-requests}
+       \label{lst:reverse_dns},
+       captionpos=b,language={}]
+ {listings/snare-path-requests.txt}
+ 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+\newpage 
+ 
+\section*{Auswertung snare-post-requests}
+\label{app:Auswertung snare-post-requests}
+
+\lstinputlisting
+    [caption={Auswertung snare-path-requests}
+       \label{lst:reverse_dns},
+       captionpos=b,language={}]
+ {listings/snare-post-requests.txt}  
